<resources>
    <string name="app_name">载下我</string>

    <!-- 发现界面 -->
    <string name="start_time_str">出发时间：</string>
    <string name="start_place_str">出发地点：</string>
    <string name="price_str">预计价格：</string>
    <string name="end_place_str">目标地点：</string>
    <string name="statue_str">订单状态：</string>
    <!--首页-->
    <string name="str_find">发现</string>
    <string name="str_publish">发布</string>
    <string name="str_me">我</string>

    <string name="error_str">没加载到数据@^_^@</string>
    <string name="reload_str">戳我试试</string>

    <!--发布界面-->
    <string name="warm_title_str">发布需求请填写下列信息</string>
    <string name="name_str">乘客姓名：</string>
    <string name="phone_str">手机号码：</string>
    <string name="publish_str">发布</string>

    <string name="str_yes">确定</string>
    <string name="str_no">取消</string>
    <!--我的页面-->
    <string name="str_name">Lizheng</string>
    <string name="str_journey">行程</string>
    <string name="str_feedback">反馈</string>
    <string name="str_post">提交</string>
    <string name="str_feedback_hint">请输入你的反馈内容...</string>
    <string name="str_vehicle_owne">车主</string>
    <string name="str_passenger">乘客</string>
    <string name="str_passenger_name">乘客姓名：</string>
    <string name="str_passenger_phone">乘客电话：</string>
    <!--登陆/注册页面-->
    <string name="str_username">请输入账号...</string>
    <string name="str_phone">请输入手机号码...</string>
    <string name="str_password">请输入密码...</string>
    <string name="str_login">登陆</string>
    <string name="str_register">注册</string>
    <string name="str_registerNow">立即注册</string>
</resources>
