<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/txt_12"
    android:textColor="@color/colorBlack"
    android:text="@string/warm_title_str"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/margin_20"
    android:paddingBottom="@dimen/padding_15"
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:background="@color/colorBlack"
        android:layout_marginLeft="@dimen/margin_100"
        android:layout_marginRight="@dimen/margin_100"
        android:layout_marginBottom="@dimen/margin_40"
        />

    <LinearLayout
        style="@style/publish_linear_style"
        >
        <TextView
            style="@style/publish_text_style"
            android:text="@string/name_str"
            />
        <EditText
            android:id="@+id/edit_name"
            style="@style/publish_edit_style"/>
    </LinearLayout>

    <LinearLayout
        style="@style/publish_linear_style"
        >
        <TextView
            style="@style/publish_text_style"
            android:text="@string/phone_str"
            />
        <EditText
            android:id="@+id/edit_number"
            style="@style/publish_edit_style"/>
    </LinearLayout>

    <LinearLayout
        style="@style/publish_linear_style"

        >
        <TextView
            style="@style/publish_text_style"
            android:text="@string/start_time_str"
            />
        <TextView
            android:id="@+id/txt_start_time"
            style="@style/publish_edit_style"/>
    </LinearLayout>

    <LinearLayout
        style="@style/publish_linear_style"
        >
        <TextView
            style="@style/publish_text_style"
            android:text="@string/start_place_str"
            />
        <EditText
            android:id="@+id/edit_start_place"
            style="@style/publish_edit_style"/>
    </LinearLayout>

    <LinearLayout
        style="@style/publish_linear_style"
        >
        <TextView
            style="@style/publish_text_style"
            android:text="@string/end_place_str"
            />
        <EditText
            android:id="@+id/edit_end_place"
            style="@style/publish_edit_style"/>
    </LinearLayout>

    <LinearLayout
        style="@style/publish_linear_style"
        >
        <TextView
            style="@style/publish_text_style"
            android:text="@string/price_str"
            />
        <EditText
            android:id="@+id/edit_price"
            style="@style/publish_edit_style"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="@dimen/margin_20"
        android:id="@+id/btn_publish"
        style="@style/me_btn_style"
        android:text="@string/publish_str"

        />
</LinearLayout>