<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sendi.pickmeup.MainActivity">
    <include layout="@layout/title_bar"></include>
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
<RadioGroup
    android:id="@+id/rg_main"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_5"
    android:paddingBottom="@dimen/padding_5"
    android:background="@color/colorWhite">
    <RadioButton
        android:id="@+id/rb_find"
        style="@style/main_btn_style"
        android:drawableTop="@drawable/find_btn_selector"
        android:text="@string/str_find"/>
    <RadioButton
        android:id="@+id/rb_pulish"
        style="@style/main_btn_style"
        android:drawableTop="@drawable/publish_btn_selector"
        android:text="@string/str_publish"/>
    <RadioButton
        android:id="@+id/rb_me"
        style="@style/main_btn_style"
        android:drawableTop="@drawable/me_btn_selector"
        android:text="@string/str_me"/>
</RadioGroup>
</LinearLayout>
