<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/margin_5"
    android:layout_marginRight="@dimen/margin_5"
    android:layout_marginTop="@dimen/margin_10"
    app:cardCornerRadius="@dimen/margin_5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/txt_16"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_5"
        android:layout_marginLeft="@dimen/margin_20"
        android:text="客户信息"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_5"
        android:paddingTop="@dimen/margin_5"
        >

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"

            >

            <TextView
                style="@style/find_item_text_str"
                android:text="@string/start_time_str"
                />

            <TextView
                android:id="@+id/txt_start_time"
                style="@style/find_item_text_dy"
                android:text="15:15"
                />

            <TextView
                style="@style/find_item_text_str"
                android:text="@string/start_place_str"
                />

            <TextView
                android:id="@+id/txt_start_place"
                style="@style/find_item_text_dy"
                android:text="就业楼"
                />
            <TextView
                style="@style/find_item_text_str"
                android:text="@string/str_passenger_name"
                />

            <TextView
                android:id="@+id/txt_passenger_name"
                style="@style/find_item_text_dy"
                android:text="Lizheng"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                style="@style/find_item_text_str"
                android:text="@string/price_str"
                />

            <TextView
                android:id="@+id/txt_price"
                style="@style/find_item_text_dy"
                android:text="0.5元"
                />

            <TextView
                style="@style/find_item_text_str"
                android:text="@string/end_place_str"
                />

            <TextView
                android:id="@+id/txt_end_place"
                style="@style/find_item_text_dy"
                android:text="就业楼"
                />
            <TextView
                style="@style/find_item_text_str"
                android:text="@string/str_passenger_phone"
                />

            <TextView
                android:id="@+id/txt_passenger_phone"
                style="@style/find_item_text_dy"
                android:text="13450346564"
                />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>