<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="@dimen/margin_40"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<TextView
    android:text="车主姓名："
    style="@style/passenger_txt_style"/>
<TextView
    android:id="@+id/txt_vehicle_name"
    android:text="lizheng"
    style="@style/passenger_txt_style" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/phone_str"
            style="@style/passenger_txt_style"/>
        <TextView
            android:id="@+id/txt_vehicle_phone"
            android:text="15907594531"
            style="@style/passenger_txt_style" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/start_time_str"
            style="@style/passenger_txt_style"/>
        <TextView
            android:id="@+id/txt_start_time"
            android:text="15：30"
            style="@style/passenger_txt_style" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/passenger_txt_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_place_str" />
        <TextView
            android:id="@+id/txt_start_place"
            android:text="就业楼"
            style="@style/passenger_txt_style" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/end_place_str"
            style="@style/passenger_txt_style"/>
        <TextView
            android:id="@+id/txt_end_place"
            android:text="海安A"
            style="@style/passenger_txt_style" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/price_str"
            style="@style/passenger_txt_style"/>
        <TextView
            android:id="@+id/txt_price"
            android:text="10"
            style="@style/passenger_txt_style" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/statue_str"
            style="@style/passenger_txt_style"/>
        <TextView
            android:id="@+id/txt_statue"
            android:text="已接单"
            style="@style/passenger_txt_style" />
    </LinearLayout>

    <Button
        android:text="取消订单"
        android:id="@+id/btn_cancel"
        android:layout_marginTop="@dimen/margin_25"
        style="@style/me_btn_style"/>
    <Button
        android:text="完成订单"
        android:id="@+id/btn_finish"
        android:layout_marginTop="@dimen/margin_15"
        style="@style/me_btn_style"/>
</LinearLayout>