<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/margin_5"
    android:layout_marginRight="@dimen/margin_5"
    android:layout_marginTop="@dimen/margin_10"
    app:cardCornerRadius="@dimen/margin_5"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_10"
        android:paddingTop="@dimen/margin_10"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"

            >

            <TextView
                style="@style/find_item_text_str"
                android:text="@string/start_time_str"
                />

            <TextView
                android:id="@+id/txt_start_time"
                style="@style/find_item_text_dy"
                android:text="15:15"
                />

            <TextView
                style="@style/find_item_text_str"
                android:text="@string/start_place_str"
                />

            <TextView
                android:id="@+id/txt_start_place"
                style="@style/find_item_text_dy"
                android:text="就业楼"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                style="@style/find_item_text_str"
                android:text="@string/price_str"
                />

            <TextView
                android:id="@+id/txt_price"
                style="@style/find_item_text_dy"
                android:text="0.5元"
                />

            <TextView
                style="@style/find_item_text_str"
                android:text="@string/end_place_str"
                />

            <TextView
                android:id="@+id/txt_end_place"
                style="@style/find_item_text_dy"
                android:text="就业楼"
                />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>